# tfg-us

./: .dockerignore  .env.example  .gitignore  .gitmessage.txt  Dockerfile  LICENSE  README.md  deploy.sh  detoxify.sh  docker-compose.yml  manage.py  populate.sh  pyproject.toml
home/: forms.py  models.py  urls.py  views.py
home/fixtures/: profile.json
home/migrations/: 0001_initial.py  0002_remove_profileinformation_source.py
posts/: forms.py  models.py  tasks.py  urls.py  views.py
posts/fixtures/: comments.json  posts.json  sources.json  tags.json
posts/migrations/: 0001_initial.py  0002_alter_post_name_alter_post_object_names.py  0002_remove_post_post_type_remove_post_sources_and_more.py  0002_remove_tag_source_source_profile_source_tag.py  0003_alter_source_profile_alter_source_tag.py
questions/: forms.py  models.py  tasks.py  urls.py  views.py
questions/fixtures/: answers.json  questions.json
questions/migrations/: 0001_initial.py
root/: forms.py  models.py  urls.py  views.py
root/fixtures/: groups.json
root/migrations/: 0001_initial.py
samer/: __init__.py  asgi.py  bucket.py  celery.py  detox.py  detoxify.py  settings.py  tasks.py  urls.py  utils.py  wsgi.py
samer/settings/: base.py  local.py  prod.py
static/css/: base.css  carousel.css  create_question.css  question.css  questions.css  slider.css
static/javascript/: base.js  carousel.js  create_question.js  profile.js  questions.js  root_selector.js  tag.js  user.js
staticfiles/css/: carousel.css  comment.css  home.css  (+2 more)
templates/: base.html
users/: forms.py  urls.py  views.py
(+41 files in other folders)
