[tool.poetry]
name = "samer"
version = "0.1.0"
description = ""
authors = ["jmartinacu <jmartinacu2002@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.2"
python-dotenv = "^1.0.1"
boto3 = "^1.35.54"
psycopg2 = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
