[tool.poetry]
name = "samer"
version = "0.1.0"
description = ""
authors = ["jmartinacu <jmartinacu2002@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.2"
python-dotenv = "^1.0.1"
boto3 = "^1.35.54"
psycopg2 = "^2.9.10"
python-magic = "^0.4.27"
requests = "^2.32.3"
pillow = "^11.1.0"
imageio = "^2.37.0"
celery = "^5.4.0"
redis = "^5.2.1"
detoxify = "^0.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
